Fix wrapping for sort-and-per-page toolbar at smaller viewports

--- a/app/assets/stylesheets/modules/sort-and-per-page-toolbar.scss
+++ b/app/assets/stylesheets/modules/sort-and-per-page-toolbar.scss
@@ -17,35 +17,24 @@
   }
 }
 
-@include media-breakpoint-up(xs) {
-  .sort-and-per-page {
-    #search-results-toolbar {
-      position: relative;
-      padding: 0;
-      margin: 0;
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
-    }
-  }
+.sort-and-per-page {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 @include media-breakpoint-down(sm) {
   .sort-and-per-page {
-    padding: 4px 0;
-    margin-top: .8em;
-    border-bottom: none;
-    display: flex;
-    align-items: center;
+    justify-content: start;
 
-    #search-results-toolbar {
-      display: block;
-      margin-left: 8px;
-
-      #citeLink, #tools-dropdown, .clear-bookmarks {
-        margin: 3px;
-      }
+    #citeLink, #tools-dropdown, .clear-bookmarks {
+      margin: 3px;
     }
+  }
+}
+
+.selection-list-toolbar {
+  #viewWidgets {
+    padding-top: 0.4em;
   }
 }
